[package]
name = "bst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base-62 = "0.1.1"
chacha20poly1305 = { version = "0.10" }
clap = { version = "4", features = ["derive"] }
directories = "6"
ed25519-dalek = "2.1.1"
humanize-duration = "0.0.7"
rand_core = { version = "0.9", features = ["os_rng"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = { version = "2", features = ["serde"] }
x25519-dalek = "2"
zeroize = "1.8.1"
